CRM AI - Chat about this - Code improvements